[gd_scene load_steps=9 format=3 uid="uid://glxt465a7cxc"]

[ext_resource type="Script" path="res://source/fallmon/scripts/settings.gd" id="1_1t307"]
[ext_resource type="FontFile" uid="uid://ci51a1kbarqd3" path="res://assets/fonts/vcr.ttf" id="2_3ky4x"]
[ext_resource type="AudioStream" uid="uid://c2oosn0afscwm" path="res://assets/audios/sounds/menus/confirm.ogg" id="3_ni0gp"]
[ext_resource type="AudioStream" uid="uid://5kqmh8lm2c3p" path="res://assets/audios/sounds/menus/vhs-change.ogg" id="4_g22t7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8m0rr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8vuo"]
bg_color = Color(0.345098, 0.345098, 0.345098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4h4d"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vuprl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1279.0
offset_bottom = 719.0
script = ExtResource("1_1t307")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="shaders" type="Button" parent="bg"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("2_3ky4x")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_8m0rr")
theme_override_styles/hover = SubResource("StyleBoxFlat_h8vuo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e4h4d")
theme_override_styles/focus = SubResource("StyleBoxFlat_vuprl")
text = "SHADERS"
alignment = 0

[node name="setting" type="Label" parent="bg/shaders"]
layout_mode = 0
offset_left = 256.0
offset_right = 384.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_3ky4x")
theme_override_font_sizes/font_size = 32
text = "ON"
horizontal_alignment = 2
vertical_alignment = 1

[node name="leave" type="Button" parent="bg"]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 256.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("2_3ky4x")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_8m0rr")
theme_override_styles/hover = SubResource("StyleBoxFlat_h8vuo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e4h4d")
theme_override_styles/focus = SubResource("StyleBoxFlat_vuprl")
text = "EXIT"
alignment = 0

[node name="description" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 639.0
theme_override_fonts/font = ExtResource("2_3ky4x")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ni0gp")

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_g22t7")
volume_db = -10.0

[connection signal="mouse_entered" from="bg/shaders" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="bg/shaders" to="." method="_on_shaders_mouse_entered"]
[connection signal="mouse_exited" from="bg/shaders" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="bg/shaders" to="." method="_on_shaders_pressed"]
[connection signal="mouse_entered" from="bg/leave" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="bg/leave" to="." method="_on_leave_pressed"]
